--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "client-install": "cd client && npm install ",
-    "client-build": "cd client && npm run build",
-    "install-all": "npm install && npm run client-install"
+    "client": "cd client && npm start",
+    "dev": "concurrently -n 'server,client' -c 'red,green'\"nodemon server.js\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
